<resources>
    <string name="app_name">SmartBear</string>

    <!--Base Buttons-->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>

    <!--Registration-->
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile number</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Confirm password</string>
    <string name="create_account">Sign Up</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>

    <!--Login-->
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="show_password">Show Password</string>
    <string name="hide_password">Hide Password</string>

    <!--Forgot Password-->
    <string name="registered_email_id">Please enter your Registered Email Id below:</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="logout_user">Log Out</string>
    <string name="text_line_courses">Courses</string>
    <string name="text_line_tools">Tools</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="course_details">Course details</string>
</resources>
