<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/registered_email_id"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/forgot_password_text_input_layout_margin"
        android:layout_marginTop="@dimen/forgot_password_text_input_layout_margin">

        <EditText
            android:id="@+id/registered_email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/backToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@null"
            android:gravity="center_vertical|start"
            android:padding="5dp"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/forgot_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@null"
            android:enabled="false"
            android:gravity="center_vertical|end"
            android:padding="5dp"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </FrameLayout>

</LinearLayout>